[metadata]
name = pipconf
version = 0.0.1
author = Krisztian Fekete
author-email = fekete.krisztyan@gmail.com
summary = Tool for managing multiple pip configuration files
description-file = README.md
license = MIT

[files]
modules = pipconf

[entry_points]
console_scripts =
    pipconf = pipconf:main
